--- a/src/frontend/src/app/pages/secure/manage-users/manage-users.component.scss
+++ b/src/frontend/src/app/pages/secure/manage-users/manage-users.component.scss
@@ -2,3 +2,17 @@
     color: #666;
     font-size: 12px;
 }
+
+.avatar-padding {
+    width: 25px;
+    height: 25px;
+    display: inline-block
+}
+
+.avatar {
+    width: 25px;
+    height: 25px;
+    display: inline-block;
+    margin-top: 5px;
+    position: absolute
+}
