--- a/src/frontend/src/app/pages/secure/manage-user/manage-user.component.scss
+++ b/src/frontend/src/app/pages/secure/manage-user/manage-user.component.scss
@@ -8,3 +8,10 @@
     color: #666;
     font-size: 12px;
 }
+
+.avatar {
+    width: 80px;
+    height: 80px;
+    display: inline-block;
+    margin-top: 5px;
+}
