--- a/src/frontend/src/app/pages/secure/delivery/delivery.component.html
+++ b/src/frontend/src/app/pages/secure/delivery/delivery.component.html
@@ -13,7 +13,7 @@
                                 <span>
                                     <p-confirmPopup></p-confirmPopup>
                                     <button pButton icon="pi pi-times" *ngIf="!delivery.tripStarted"
-                                        class="p-button-outlined p-button-success" label="PICKUP"
+                                        class="p-button-outlined p-button-success" label="START TRIP"
                                         (click)="onPickupClick($event)"></button>
                                 </span>
 
