--- a/src/frontend/src/app/pages/secure/available-deliveries/available-deliveries.component.html
+++ b/src/frontend/src/app/pages/secure/available-deliveries/available-deliveries.component.html
@@ -1,6 +1,6 @@
 <div class="grid">
 
-    <div class="col-12">
+    <div class="col-12" *ngIf="auth.dbUser.warehouseId && !hasActiveDelivery">
         <div class="pt-3 flex align-items-center justify-content-center">
 
             <div class="pt-3">
@@ -16,45 +16,51 @@
 
     <div class="col-12">
         <div class="p-3">
-            <p-card>
-                <h1 class="text-2xl font-bold m-0">Deliveries of warehouse {{service.warehouseName$ | async}}</h1>
+            <p-card *ngIf="!auth.dbUser.warehouseId">
+                <h1 class="text-2xl font-bold m-0">You don't have warehouse assigned! 😯</h1>
+            </p-card>
+
+            <p-card *ngIf="auth.dbUser.warehouseId && hasActiveDelivery">
+                <h1 class="text-2xl font-bold m-0">You have already active delivery! 🤨</h1>
+            </p-card>
+
+            <p-card *ngIf="auth.dbUser.warehouseId && !hasActiveDelivery">
+                <h1 class="text-2xl font-bold m-0">Available deliveries</h1>
 
                 <ng-container *ngIf="pagedResult">
 
                     <p-card class="p-2" *ngFor="let item of pagedResult.queryable">
                         <div class="grid">
                             <div class="col-12">
-                                <h2 class="text-xl font-bold m-0 text-primary" style="cursor:pointer"
-                                    [routerLink]="'/secure/delivery/' + item.id">
-                                    {{item.deliveryName}}
 
-                                    <span class="order-text">({{item.orderName}})</span>
-                                </h2>
+                                <div class="delivery-container">
+                                    <div>
+                                        <h2 class="text-xl font-bold m-0 text-primary">
+                                            {{item.deliveryName}}
 
-                                <p>
-                                    {{item.creationDate.toLocaleString(DateTime.DATETIME_MED)}} -
-                                    <b> {{getProductsText(item.productTypesCount)}} </b>
+                                            <span class="order-text">({{item.orderName}}, {{item.warehouseName}})</span>
+                                        </h2>
 
-                                    <p-tag *ngIf="item.isLost" styleClass="ml-2 mb-1" icon="pi pi-calendar"
-                                        severity="danger" value="LOST">
-                                    </p-tag>
+                                        <p>
+                                            {{item.creationDate.toLocaleString(DateTime.DATETIME_MED)}} -
+                                            <b> {{getProductsText(item.productTypesCount)}} </b> <br />
+                                            {{item.warehouseCountryEnglishName}}, {{item.warehouseFullStreet}}
+                                        </p>
+                                    </div>
 
-                                    <p-tag *ngIf="!item.tripStarted " styleClass="ml-2 mb-1" icon="pi pi-calendar"
-                                        severity="warning" value="Trip not started yet">
-                                    </p-tag>
+                                    <div>
+                                        <button pButton pRipple [disabled]="isAssigning"
+                                            *ngIf="screen.screenSize < ScreenSize.sm" type="button" icon="pi pi-check"
+                                            (click)="onAssignMeClick(item)" pTooltip="Assign me"
+                                            class="p-button-rounded p-button-outlined"></button>
 
-                                    <p-tag *ngIf="item.tripStarted && !item.isDelivered" styleClass="ml-2 mb-1"
-                                        icon="pi pi-calendar" severity="success" value="Trip started">
-                                    </p-tag>
+                                        <button pButton [disabled]="isAssigning"
+                                            *ngIf="screen.screenSize >= ScreenSize.sm" type="button" icon="pi pi-check"
+                                            (click)="onAssignMeClick(item)" label="ASSIGN ME"
+                                            class="p-button-outlined p-button-warning"></button>
+                                    </div>
+                                </div>
 
-                                    <p-tag *ngIf="!item.isDelivered" styleClass="ml-2 mb-1" icon="pi pi-calendar"
-                                        severity="warning" value="Not delivered">
-                                    </p-tag>
-
-                                    <p-tag *ngIf="item.isDelivered" styleClass="ml-2 mb-1" icon="pi pi-calendar"
-                                        severity="success" value="Delivered">
-                                    </p-tag>
-                                </p>
 
                             </div>
                         </div>
