--- a/src/frontend/src/app/pages/secure/current-delivery/current-delivery.component.html
+++ b/src/frontend/src/app/pages/secure/current-delivery/current-delivery.component.html
@@ -1,7 +1,14 @@
 <div class="grid">
     <div class="col-12">
         <div class="p-3">
-            <p-card>
+
+            <p-card *ngIf="!auth.dbUser.warehouseId">
+                <h1 class="text-2xl font-bold m-0">You don't have warehouse assigned! 😯</h1>
+            </p-card>
+
+            <!-- // 4. Nowy ekran "Current delivery" - informacje aktualnej dostawy (from/to) -->
+
+            <p-card *ngIf="auth.dbUser.warehouseId">
                 <div *ngIf="delivery" class="grid">
                     <div class="col-12">
                         <div class="flex align-items-center justify-content-start">
