--- a/src/frontend/src/app/pages/secure/deliveries/deliveries.component.html
+++ b/src/frontend/src/app/pages/secure/deliveries/deliveries.component.html
@@ -1,6 +1,6 @@
 <div class="grid">
 
-    <div class="col-12">
+    <div class="col-12" *ngIf="auth.dbUser.warehouseId">
         <div class="pt-3 flex align-items-center justify-content-center">
 
             <div class="pt-3">
@@ -16,7 +16,12 @@
 
     <div class="col-12">
         <div class="p-3">
-            <p-card>
+
+            <p-card *ngIf="!auth.dbUser.warehouseId">
+                <h1 class="text-2xl font-bold m-0">You don't have warehouse assigned! 😯</h1>
+            </p-card>
+
+            <p-card *ngIf="auth.dbUser.warehouseId">
                 <h1 class="text-2xl font-bold m-0">Deliveries of warehouse {{service.warehouseName$ | async}}</h1>
 
                 <ng-container *ngIf="pagedResult">
