--- a/src/frontend/src/app/pages/secure/stocks/stocks.component.html
+++ b/src/frontend/src/app/pages/secure/stocks/stocks.component.html
@@ -1,7 +1,11 @@
 <div class="grid">
     <div class="col-12">
         <div class="p-3">
-            <p-card>
+            <p-card *ngIf="!auth.dbUser.warehouseId">
+                <h1 class="text-2xl font-bold m-0">You don't have warehouse assigned! 😯</h1>
+            </p-card>
+
+            <p-card *ngIf="auth.dbUser.warehouseId">
                 <h1 class="text-2xl font-bold m-0">Stock of warehouse {{service.warehouseName$ | async}}</h1>
 
                 <ng-container *ngIf="pagedResult">
