--- a/src/frontend/src/app/pages/secure/delivery/delivery.component.html
+++ b/src/frontend/src/app/pages/secure/delivery/delivery.component.html
@@ -13,7 +13,7 @@
                                 <span>
                                     <p-confirmPopup></p-confirmPopup>
                                     <button pButton icon="pi pi-arrow-up-right" *ngIf="!delivery.tripStarted"
-                                        class="p-button-outlined p-button-success" label="GOODS HANDED OVER"
+                                        class="p-button-outlined p-button-success" label="HAND OVER GOODS"
                                         [disabled]="isButtonOnAction" (click)="onStartTripClick($event)"></button>
                                 </span>
 
