--- a/src/frontend/src/app/pages/secure/layout/sidebar/sidebar.component.html
+++ b/src/frontend/src/app/pages/secure/layout/sidebar/sidebar.component.html
@@ -32,7 +32,9 @@
         </div>
 
         <div class="mt-auto border-top-1 surface-border p-3 flex justify-content-between">
-            <div style="width:80px;height:40px"></div>
+            <div class="warehouse-text-container">
+                <div class="warehouse-text">{{warehouseName}}</div>
+            </div>
             <a pRipple pTooltip="Landing page" tooltipPosition="bottom" routerLink="/"
                 class="cursor-pointer inline-flex align-items-center justify-content-center border-2 surface-border hover:surface-100 text-600 transition-colors transition-duration-150 border-circle"
                 style="width:40px;height:40px">
